refactor: replace .Collect() to .toList()